# osm-pbf-parquet

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: build_test.yaml  issue-labeler-node16.yml  issue-labeler.yml  release_deploy.yaml
benches/: benchmark.rs
osm-pbf-parquet/: Cargo.toml
osm-pbf-parquet/src/: lib.rs  main.rs  osm_arrow.rs  sink.rs  util.rs
osm-pbf-parquet/test/: validate.py
osmpbf/: Cargo.toml
osmpbf/src/: blob.rs  block.rs  mmap_blob.rs
osmpbf/tests/: read.rs
src/: error.rs  lib.rs  main.rs  osm_arrow.rs  pbf.rs  sink.rs  util.rs
test/: test.sh  validate.py
