[package]
name = "osmpbf"
version = "0.3.7"
authors = ["Johannes Hofmann <mail@b-r-u.org>"]
repository = "https://github.com/b-r-u/osmpbf"
homepage = "https://github.com/b-r-u/osmpbf"
description = "A reader for the OpenStreetMap PBF file format (*.osm.pbf)."
categories = ["parser-implementations", "encoding", "science"]
keywords = ["openstreetmap", "osm", "pbf", "protocolbuffer", "protobuf"]
rust-version = "1.88"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
async = ["async-stream", "object_store", "tokio", "tokio/io-util", "tokio-stream"]
default = ["zlib-ng"]
rust-zlib = ["flate2/rust_backend"]
zlib = ["flate2/zlib"]
zlib-ng = ["flate2/zlib-ng"]

[dependencies]
async-stream = { version = "0.3.6", optional = true }
byteorder = "1.4"
bytes = "1.10.1"
flate2 = { version = "1.0", default-features = false }
memmap2 = "0.5"
object_store = { version = "0.13", optional = true }
protobuf = { version = "3.1", features = ["with-bytes"] }
rayon = "1.5"
tokio = { version =  "1.49", optional = true }
tokio-stream = { version = "0.1", optional = true }

[dev-dependencies]
assert_approx_eq = "1.1.0"
criterion = { version = "0.3", features = ["html_reports"] }
tokio-test = "0.4.5"
futures-util = "0.3.31"

[build-dependencies]
protobuf-codegen = "3.1"
